dsm news!

# 2.2.18
 * Clarification of the predict.dsm return documentation. Thanks to Dave Fifield for the suggestion.

# 2.2.17
 * Now Suggests package "sp" (needed for some parts of the mexdolphin example data)

# 2.2.16
 * check that any Sample.Labels match up, if none do then throw an error. Thanks to Madhura Davate for bringing this issue to my attention.
 * gamma option removed, since it now is not ignored by gam(). If using method="GCV.Cp" then gamma=1.4 should still be used (but generally we advise using REML rather than GCV for smoothing parameter selection)
 * dsm now requires mgcv version 1.8-23 or higher.
 * dsm.var.prop (and dsm_varprop) now throw an error when there are no covariates in the detection function as it can't do anything useful
 * new function obs_exp is a diagnostic function to compare observed and expected counts at different covariate aggregations

# 2.2.15
 * when mexdolphins is loaded using data(), the data no longer need to be attach()ed
 * dsm.var.prop throws an error when count or N are not used as the response.
 * dsm.var.prop now calls dsm_varprop, which keeps the scale parameter constant when refitting models for variance propagation. dsm_varprop provides a lower-level interface to variance propagation and is probably faster and more flexible.
 * add vis.concurvity to visually assess concurvity (colinearity extended to smooth terms) in the model
 * new model diagnostic function: plot_pred_by_term -- plots the effect of each smooth in the model spatially.
 * remove "abundance" option for the response, use "count"
 * dsm.var.prop and dsm_varprop have better diagnostics for checking the variance model hasn't done something weird
 * dsm.var.movblk discards replicates where the model didn't converge