@@ -2,6 +2,8 @@ dsm news!
 
 # 2.2.18
  * Clarification of the predict.dsm return documentation. Thanks to Dave Fifield for the suggestion.
+ * off.set=NULL lead to predictions of 0 when density was used. Now just returns density. Thanks to Dave Fifield for the catch.
+
 
 # 2.2.17
  * Now Suggests package "sp" (needed for some parts of the mexdolphin example data)
